python-apt (0.7.10~exp1) experimental; urgency=low

  * Build-Depend on python-debian, use it to get version number from changelog

 -- Julian Andres Klode <jak@debian.org>  Sun, 29 Mar 2009 14:09:18 +0200

python-apt (0.7.9) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt/gtk/widgets.py:
    - Handle older versions of python-gobject which do not ship glib
  * apt/package.py: Introduce the Version class
    - Deprecate Package.candidate*() and Package.installed*(), except for
      installedFiles.
    - Provide Version.get_source() (LP: #118788)
    - Provide Package.versions (Closes: #513236)
  * apt/progress/: New package, replaces apt.progress and apt.gtk
    - apt/progress/gtk2.py: Moved here from apt/gtk/widgets.py
    - apt/progress/__init__.py: Move here from apt/progress.py
  * doc/source/*: Improve the documentation
    - Document more attributes and functions of apt_pkg (they are all listed)

  [ Michael Vogt ]
  * aptsources/distro.py:
    - use iso_3166.xml instead of iso_3166.tab
    - fix incorrect indent
  * debian/control:
    - add Recommends to iso-codes (for iso_3166.xml)
  * apt/package.py:
    - make sure to set the defaulttimeout back to the
      original value (in getChangelog(), LP: #314212)
  * apt/cache.py:
    - when setting a alternative rootdir, read the
      config from it as well
  * python/configuration.cc, python/apt_pkgmodule.cc:
    - add apt_pkg.ReadConfigDir()
  * python/cache.cc, tests/getcache_mem_corruption.py:
    - test if progress objects have the right methods
      and raise error if not (thanks to Emanuele Rocca)
      closes: #497049
  * apt/package.py:
    - avoid uneeded interal references in the Package objects

 -- Michael Vogt <mvo@debian.org>  Thu, 19 Mar 2009 13:39:21 +0100

python-apt (0.7.9~exp2) experimental; urgency=low

  [ Julian Andres Klode ]
  * apt/*.py:
    - Almost complete cleanup of the code
    - Remove inconsistent use of tabs and spaces (Closes: #505443)
    - Improved documentation