@@ -22,9 +22,6 @@ build/python-apt-dbg::
 	  python$$i-dbg ./setup.py build; \
 	done
 
-build/python-apt::
-	pydoc -w
-
 install/python-apt-dbg::
 	for i in $(cdbs_python_build_versions); do \
 	  python$$i-dbg ./setup.py install --root $(CURDIR)/debian/python-apt-dbg; \
@@ -32,6 +29,9 @@ install/python-apt-dbg::
 	find debian/python-apt-dbg \
 		! -type d ! -name '*_d.so' | xargs rm -f
 	find debian/python-apt-dbg -depth -empty -exec rmdir {} \;
+
+binary-predeb/python-apt::
+	ln -sf ../../../../javascript/jquery/jquery.js debian/python-apt/usr/share/doc/python-apt/html/_static/jquery.js
 
 binary-predeb/python-apt-dbg::
 	rm -rf debian/python-apt-dbg/usr/share/doc/python-apt-dbg
